# ComfyUI-WR_Pocket_TK

./: LICENSE  README.md  __init__.py  pyproject.toml
ComfyUI-WR_Pocket_TK/: requirements.txt
ComfyUI-WR_Pocket_TK/locales/en/: main.json
ComfyUI-WR_Pocket_TK/nodes/: SizeManual.py
ComfyUI-WR_Pocket_TK/web/: EVF.js
locales/en/: nodeDefs.json
locales/zh/: main.json  nodeDefs.json
nodes/: CommonValues.py  EVF.py  SizeAuto.py  __init__.py  image_scaling.py  image_tools.py  md.py
web/: EVF.js  main.js
web/js/: i18n.js  locales.js
